--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.webp" />
+    <link rel="stylesheet" href="%sveltekit.assets%/global.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-    <link rel="stylesheet" href="%sveltekit.assets%/global.css" />
+    <script>
+      (function() {
+        // Check localStorage for theme
+        // const pref = JSON.parse(localStorage.getItem('content') || '{}').pref || {};
+        // const dark = pref.darkTheme || pref.systemTheme && window.matchMedia('(prefers-color-scheme: dark)').matches || false;
+        // document.documentElement.dataset.scheme = dark ? 'dark' : 'light';
+        document.documentElement.dataset.scheme = 'light';
+      })();
+    </script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
